
---------------------------------------------------------------------------------------------------------

Se actualizo la logica de Level3 para que funcione con las llamadas a metodos de grid desde BombCandy

---------------------------------------------------------------------------------------------------------

Se cambiaron los nombres de los niveles
Se cambio el menu de niveles para que los muestre todos
Se arreglo la logica de distribucion de SpecialCandyGeneratorCell
Se cambio la cantidad de caramelos que se asigna a GeneratorCell en Level3

---------------------------------------------------------------------------------------------------------

Se creo en GameApp un enum APP_SCENES y un mapa de APP_SCENES a Scene
Se creo en GameApp un metodo publico setScene(APP_SCENES scene) que pone en stage una Scene

Se creo en CandyGame metodos playerWon() y gameOver() que dan el resultado del estado del juego
Se agrego a CandyFrame la propiedad GameApp
Se agrego a CandyFrame metodos para mostrar dialogos de victoria y derrota

---------------------------------------------------------------------------------------------------------

Se movio el enum CellEffect a Cell, y se movio la responsabilidad de generar el efecto a un switch en BoardPanel

---------------------------------------------------------------------------------------------------------

Se agrego el Timer a Level4
Se agrego el metodo scorePanelUpdated() a GameListen
Se implemento el metodo scorePanelUpdated() en CandyFrame

---------------------------------------------------------------------------------------------------------

Se corrigio una llamada erronea a timeProviderConsumed()
Se agrego el parametro gridLoaded a Grid, y se lo utilizo en los metodos exploded() de BombCandy y TimeBonusCandy

---------------------------------------------------------------------------------------------------------

Se redujeron muchos niveles de accesos excesivos